Fix line wrap issues on mac browsers

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -111,7 +111,7 @@ footer {
     margin-top: 180px;
 
     quote {
-      font-size: 2.8em;
+      font-size: 2.7em;
       line-height: 2em;
     }
   }
@@ -131,7 +131,7 @@ footer {
     margin-top: 150px;
 
     quote {
-      font-size: 2.13em;
+      font-size: 2.0em;
       line-height: 2.0em;
     }
   }
@@ -152,7 +152,7 @@ footer {
     margin-top: 0px;
 
     quote {
-      font-size: 2.9em;
+      font-size: 2.8em;
       line-height: 1.8em;
     }
   }
